--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,8 +1,28 @@
 html {
-  font-size: calc(1em + 1vw);
+  /* font-size: calc(1em + 1vw); */
+  box-sizing: initial;
 }
 
 body {
   padding: 0;
   margin: 0;
+}
+
+h1 {
+  font-size: 5em;
+}
+
+h2 {
+  font-size: 1.5em;
+}
+
+::placeholder {
+  color: inherit;
+}
+
+.newsletter {
+  margin-top: 1em;
+}
+.newsletter p {
+  margin-bottom: 0.5em;
 }
